<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/settings_title_advanced">
    <EditTextPreference
        android:key="pref_display_name"
        android:title="@string/settings_screen_identity"/>

    <PreferenceCategory >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_enable_stats"
            android:title="@string/settings_screen_enable_stats"/>
        <CheckBoxPreference
            android:key="pref_enable_insights"
            android:title="@string/settings_screen_enable_insights"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_record_participants_on_connect"
            android:title="@string/settings_screen_record_participants_on_connect"
            android:defaultValue="false"
            />
        <CheckBoxPreference
            android:key="pref_enable_automatic_subscription"
            android:title="@string/settings_screen_enable_automatic_track_subscription"
            android:defaultValue="true"
            />
        <CheckBoxPreference
            android:key="pref_enable_dominant_speaker"
            android:title="@string/settings_screen_enable_dominant_speaker"
            android:defaultValue="true"
            />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_enable_network_quality_level"
            android:title="@string/settings_screen_enable_network_quality_level"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_screen_media">
        <ListPreference
            android:key="pref_audio_codecs"
            android:negativeButtonText="@null"
            android:summary="%s"
            android:title="@string/settings_screen_audio_codecs" />
        <com.twilio.video.app.data.NumberPreference
            style="@style/AppTheme.Preference.DialogPreference"
            android:key="pref_max_audio_bitrate"
            android:title="@string/settings_screen_max_audio_bitrate" />
        <ListPreference
            android:key="pref_video_codecs"
            android:negativeButtonText="@null"
            android:summary="%s"
            android:title="@string/settings_screen_video_codecs" />
        <CheckBoxPreference
            android:key="pref_vp8_simulcast"
            android:title="@string/settings_screen_vp8_simulcast"
            android:defaultValue="false"/>
        <com.twilio.video.app.data.NumberPreference
            style="@style/AppTheme.Preference.DialogPreference"
            android:key="pref_max_video_bitrate"
            android:title="@string/settings_screen_max_video_bitrate" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/settings_screen_aspect_ratio_array"
            android:entryValues="@array/settings_screen_aspect_ratio_array_values"
            android:key="pref_aspect_ratio"
            android:summary="%s"
            android:title="@string/settings_screen_aspect_ratio"
            android:negativeButtonText="@null"/>
        <com.twilio.video.app.data.RangeBarPreference
            android:title="@string/settings_screen_fps"
            app:endKey="pref_max_fps"
            app:endTick="30"
            app:height="@dimen/preference_aspect_ratio_height"
            app:startKey="pref_min_fps"
            app:startTick="0" />
        <com.twilio.video.app.data.RangeBarPreference
            android:title="@string/settings_screen_video_dimensions"
            app:endKey="pref_max_video_dim"
            app:entries="@array/settings_screen_video_dimensions_array"
            app:height="@dimen/preference_video_dimensions_height"
            app:pinRadius="36dp"
            app:startKey="pref_min_video_dim" />
    </PreferenceCategory>
    <PreferenceCategory>
        <Preference
            android:title="Internal"
            app:fragment="com.twilio.video.app.ui.settings.InternalSettingsFragment">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>