<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/stats_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/track_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Stats.TextTrack"
        android:layout_marginTop="10dp"/>
    <View
        android:id="@+id/item_line"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/colorFadedRed"
        android:layout_below="@+id/track_name"
        android:paddingTop="8dp"
        android:layout_marginTop="5dp"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/item_line">

        <TableRow>
            <TextView
                android:text="@string/stats_track_sid"
                android:gravity="start"
                style="@style/Stats.TextTitle"/>
            <TextView
                android:id="@+id/track_sid"
                android:gravity="start"
                style="@style/Stats.TextValue"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/stats_codec_title"
                android:text="@string/stats_codec"
                android:gravity="start"
                style="@style/Stats.TextTitle"/>
            <TextView
                android:id="@+id/codec"
                android:gravity="start"
                style="@style/Stats.TextValue"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/stats_packets"
                android:gravity="start"
                style="@style/Stats.TextTitle"/>
            <TextView
                android:id="@+id/packets_lost"
                android:gravity="start"
                style="@style/Stats.TextValue"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/bytes_title"
                android:text="@string/stats_bytes_sent"
                android:gravity="start"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:paddingRight="5dp"
                android:paddingEnd="5dp"
                style="@style/Stats.TextTitle" />
                <TextView
                android:id="@+id/bytes"
                android:gravity="start"
                style="@style/Stats.TextValue"/>
        </TableRow>

        <TableRow android:id="@+id/rtt_row">
            <TextView
                android:gravity="start"
                android:text="@string/stats_rtt"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:paddingRight="5dp"
                android:paddingEnd="5dp"
                style="@style/Stats.TextTitle"/>
            <TextView
                android:id="@+id/rtt"
                android:gravity="start"
                style="@style/Stats.TextValue"/>
        </TableRow>

        <TableRow android:id="@+id/jitter_row">
            <TextView
                android:gravity="start"
                android:text="@string/stats_jitter"
                style="@style/Stats.TextTitle"/>
            <TextView
                android:id="@+id/jitter"
                android:gravity="start"
                style="@style/Stats.TextValue"/>
        </TableRow>

        <TableRow android:id="@+id/audio_level_row">
            <TextView
                android:gravity="start"
                android:text="@string/stats_audio_level"
                style="@style/Stats.TextTitle"/>
            <TextView
                android:id="@+id/audio_level"
                android:gravity="start"
                style="@style/Stats.TextValue"/>
        </TableRow>

        <TableRow android:id="@+id/dimensions_row">
            <TextView
                android:gravity="start"
                android:text="@string/stats_dimensions"
                style="@style/Stats.TextTitle"/>
            <TextView
                android:id="@+id/dimensions"
                android:gravity="start"
                style="@style/Stats.TextValue"/>
        </TableRow>

        <TableRow android:id="@+id/framerate_row">
            <TextView
                android:gravity="start"
                android:text="@string/stats_framerate"
                style="@style/Stats.TextTitle"/>
            <TextView
                android:id="@+id/framerate"
                android:gravity="start"
                style="@style/Stats.TextValue"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>
